--- a/src/css/TodoList.css
+++ b/src/css/TodoList.css
@@ -10,3 +10,17 @@
   margin-top: 2.6rem;
   list-style: none;
 }
+
+.TodoList h1 {
+  font-weight: normal;
+  font-size: 2.6rem;
+  letter-spacing: 0.05em;
+  border-bottom: 1px solid black rgba(255, 255, 255, 0.3);
+}
+.TodoList h1 span {
+  display: block;
+  font-size: 0.8rem;
+  margin-bottom: 0.7rem;
+  margin-left: 3px;
+  margin-top: 0.2rem;
+}
